# heterogeneous-multi-agent-systems

./: .readthedocs.yaml  CITATION.cff  README.md  README.rst  codemeta.json  pyproject.toml
codes/bag_files/experiments_board_4_gps/: SatMsgRcv.msg
codes/bag_files/experiments_board_4_gps/rosbag2_2022_11_08-17_11_34_no_motion/: metadata.yaml  rosbag2_2022_11_08-17_11_34_0.db3
codes/bag_files/experiments_board_4_gps/rosbag2_2022_11_08-17_14_57_no_motion_with_disruptions/: metadata.yaml  rosbag2_2022_11_08-17_14_57_0.db3
codes/bag_files/experiments_board_4_gps/rosbag2_2022_11_08-17_23_08_rotations/: metadata.yaml  rosbag2_2022_11_08-17_23_08_0.db3
codes/bag_files/experiments_board_4_gps/rosbag2_2022_11_08-17_24_30_straight_line/: metadata.yaml  rosbag2_2022_11_08-17_24_30_0.db3
codes/bag_files/experiments_board_4_gps/rosbag2_2022_11_08-17_26_21_square/: metadata.yaml  rosbag2_2022_11_08-17_26_21_0.db3
codes/bag_files/experiments_hydrogen_car/: GNSSM2_raw_20240325135850.pos  GNSSM2_raw_20240325143439.pos  generate_plot_map.py  gps_sol_status_and_distance.py
codes/src/display_rviz2_pckg/: package.xml  setup.cfg  setup.py
codes/src/display_rviz2_pckg/display_rviz2_pckg/: rviz2_gps_visualization.py  rviz2_map_visualization.py
codes/src/display_rviz2_pckg/images/: map_potager.dae  object_map.dae
codes/src/display_rviz2_pckg/launch/: display.launch.py
codes/src/display_rviz2_pckg/rviz/: config_of_rviz2.rviz  rviz2_for_board_4_gps.rviz  test_vloud.rviz
codes/src/experiments_board_4_gps_pckg/: package.xml  setup.cfg  setup.py
codes/src/gps_msg_pckg/: CMakeLists.txt  package.xml
codes/src/gps_rtk_pckg/: package.xml  setup.cfg  setup.py
codes/src/gps_rtk_pckg/gps_rtk_pckg/: gps_talker_usb.py  gps_talker_wifi.py
codes/src/test2/test2/: lumache.py
docs/: requirements.txt
docs/source/: bag-data-ros2.md  conf.py  create_your_doc.md  emlid-rtk-tutorial.md  experiments-gps-board.md  experiments-hydrogen-car.md  geolocation.md  gps-rtk.md  index.md  index.rst  install.md  naps-high-precision-indoor-positioning.md  papers-articles-thesis-citations.md  rtk-gps-pckg-ros2.md  rviz2-pckg-ros2.md  test.rst  zotero.md
docs/source/apidocs/: index.rst
docs/source/photos/: template_for_2_images.pptx
(+24 files in other folders)
